background image improvments

--- a/Monopoly/app/src/main/res/values/colors.xml
+++ b/Monopoly/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="Player2BackgroundColor">#3c87ff</color>
     <color name="Player3BackgroundColor">#b440ed</color>
     <color name="Player4BackgroundColor">#f8ff26</color>
-    <color name="cellBackground">#373aff</color>
+    <color name="cellBackground">#a6a7ff</color>
 
 
 </resources>
