--- a/app/src/main/res/layout/activity_in_location.xml
+++ b/app/src/main/res/layout/activity_in_location.xml
@@ -40,8 +40,8 @@
                 android:layout_weight="2" />
 
             <Button
-                android:id="@+id/activity_in_location_manu_settings"
-                android:textSize="25sp"
+                android:id="@+id/activity_in_location_menu_toMenu"
+                android:textSize="22sp"
                 android:layout_width="80sp"
                 android:layout_height="70sp"
                 android:layout_weight="1"
@@ -54,8 +54,22 @@
                 android:layout_weight="2" />
 
             <Button
-                android:id="@+id/activity_in_location_manu_statistics"
-                android:textSize="25sp"
+                android:id="@+id/activity_in_location_menu_loc"
+                android:textSize="22sp"
+                android:layout_width="80sp"
+                android:layout_height="70sp"
+                android:layout_weight="1"
+                style="@style/BMRButton"
+                android:text="LOC" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
+
+            <Button
+                android:id="@+id/activity_in_location_menu_statistics"
+                android:textSize="22sp"
                 android:layout_width="80sp"
                 android:layout_height="70sp"
                 android:layout_weight="1"
@@ -69,8 +83,8 @@
                 android:layout_weight="2" />
 
             <Button
-                android:id="@+id/activity_in_location_manu_map"
-                android:textSize="25sp"
+                android:id="@+id/activity_in_location_menu_map"
+                android:textSize="22sp"
                 android:layout_width="80sp"
                 android:layout_height="70sp"
                 android:layout_weight="1"
