--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,10 @@
     <color name="BMRButton_small_color_disabled" >#6d7f9c</color>
     <color name="BMRButton_small_color_enabled" >#09101d</color>
     <color name="BMRButton_stroke">#282c36</color>
+    <color name="map_flatland">#a37f62</color>
+    <color name="map_forest">#2b7b44</color>
+    <color name="map_rock">#717a7e</color>
+    <color name="map_default">#665a50</color>
+    <color name="has_player">#f54343</color>
 
 </resources>
