--- a/app/src/main/res/layout/fragment_in_location.xml
+++ b/app/src/main/res/layout/fragment_in_location.xml
@@ -8,6 +8,7 @@
     tools:context=".GameActivities.InLocation.InLocationFragment">
 
     <ScrollView
+        android:id="@+id/fragment_in_location_scrollContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp">
